# huligennem_ha

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml
custom_components/huligennem/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  media_source.py  sensor.py  services.py  services.yaml  strings.json
custom_components/huligennem/translations/: en.json
docs/: mitmproxy-ios-setup.md
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py  test_media_source.py  test_sensor.py  test_services.py
