[project]
name = "huligennem-hacs"
version = "1.0.0"
description = "HULiGENNEM HACS integration for Home Assistant - Danish children's podcast platform"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mads Lundt", email = "madslundt@users.noreply.github.com" },
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "RUF",    # ruff-specific
]
ignore = [
    "D100",   # missing docstring in public module (we have them in key files)
    "D104",   # missing docstring in public package
    "D203",   # one blank line before class docstring (conflicts with D211)
    "D213",   # multi-line summary second line (conflicts with D212)
    "ANN401", # dynamically typed expressions (Any)
    "S101",   # use of assert (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # no docstring enforcement in tests
    "ANN",    # no annotation enforcement in tests
    "S",      # no security warnings in tests
]
